--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -8,10 +8,15 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
 
-    <TextView
+    <!--TextView
         android:id="@+id/main_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:text="@string/hello_world" /-->
+        
+    <ListView
+		    android:id="@+id/listview"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content" /> 
 
 </RelativeLayout>
