--- a/res/layout/list_row.xml
+++ b/res/layout/list_row.xml
@@ -4,39 +4,37 @@
     android:layout_height="wrap_content"
     android:padding="6dip" >
 
-    <ImageView
-        android:id="@+id/icon"
-        android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
-        android:layout_alignParentBottom="true"
+    <TextView
+        android:id="@+id/firstLine"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:layout_marginRight="6dip"
-        android:contentDescription="An Image"
-        android:src="@drawable/ic_launcher" />
+        android:text="First line placeholder"
+        android:textSize="16sp" />
 
     <TextView
         android:id="@+id/secondLine"
         android:layout_width="fill_parent"
-        android:layout_height="26dip"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_toRightOf="@id/icon"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@id/firstLine"
         android:ellipsize="marquee"
-        android:singleLine="true"
         android:text="Second line placeholder"
         android:textSize="12sp" />
 
-    <TextView
-        android:id="@+id/firstLine"
-        android:layout_width="fill_parent"
-        android:layout_height="26dip"
-        android:layout_above="@id/secondLine"
+    <ImageView
+        android:id="@+id/icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignWithParentIfMissing="true"
-        android:layout_toRightOf="@id/icon"
-        android:gravity="center_vertical"
-        android:text="First line placeholder"
-        android:textSize="16sp" />
+        android:layout_below="@id/firstLine"
+        android:layout_marginRight="6dip"
+        android:layout_toRightOf="@id/secondLine"
+        android:contentDescription="An Image"
+        android:src="@drawable/ic_launcher" />
 
 </RelativeLayout>
