--- a/res/layout/list_row.xml
+++ b/res/layout/list_row.xml
@@ -11,7 +11,9 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:text="First line placeholder"
+        android:textStyle="bold"
+        android:textColor="@android:color/holo_blue_dark"
+        android:typeface="serif"
         android:textSize="16sp" />
 
     <ImageView
@@ -21,7 +23,7 @@
         android:layout_alignParentRight="true"
         android:layout_below="@id/firstLine"
         android:layout_marginRight="6dip"
-        android:contentDescription="An Image"
+        android:contentDescription="@string/snippet_image_content_description"
         android:src="@drawable/ic_launcher" />
 
     <TextView
