--- a/res/layout/list_row.xml
+++ b/res/layout/list_row.xml
@@ -11,10 +11,10 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:textStyle="bold"
         android:textColor="@android:color/holo_blue_dark"
-        android:typeface="serif"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:typeface="serif" />
 
     <ImageView
         android:id="@+id/icon"
@@ -24,7 +24,11 @@
         android:layout_below="@id/firstLine"
         android:layout_marginRight="6dip"
         android:contentDescription="@string/snippet_image_content_description"
-        android:src="@drawable/ic_launcher" />
+        android:maxHeight="90dp"
+        android:maxWidth="120dp"
+        android:adjustViewBounds="true"
+        android:scaleType="centerInside"
+        android:src="@android:drawable/progress_indeterminate_horizontal" />
 
     <TextView
         android:id="@+id/secondLine"
