--- a/res/layout/list_row.xml
+++ b/res/layout/list_row.xml
@@ -12,7 +12,7 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:textColor="@android:color/holo_blue_dark"
-        android:textSize="16sp"
+        android:textSize="18sp"
         android:textStyle="bold"
         android:typeface="serif" />
 
@@ -35,6 +35,7 @@
         android:layout_marginRight="6dip"
         android:layout_toLeftOf="@id/icon_next"
         android:adjustViewBounds="true"
+        android:layout_centerVertical="true"
         android:contentDescription="@string/snippet_image_content_description"
         android:maxHeight="90dp"
         android:maxWidth="120dp"
@@ -51,6 +52,6 @@
         android:layout_below="@id/row_title"
         android:layout_toLeftOf="@id/row_image"
         android:ellipsize="marquee"
-        android:textSize="12sp" />
+        android:textSize="14sp" />
 
 </RelativeLayout>
