--- a/res/layout/list_row.xml
+++ b/res/layout/list_row.xml
@@ -24,7 +24,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentBottom="true"
         android:layout_centerVertical="true"
-        android:contentDescription="@string/snippet_image_content_description"
+        android:contentDescription="@string/snippet_arrow_image_content_description"
         android:src="@drawable/ic_action_next_item" />
 
     <ImageView
@@ -32,7 +32,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/row_title"
-        android:layout_marginRight="6dip"
+        android:layout_margin="2dip"
         android:layout_toLeftOf="@id/icon_next"
         android:adjustViewBounds="true"
         android:layout_centerVertical="true"
